src/objects/Transaction__c.object
<CustomObject>
    <description>Transazioni Xstore / E-Commerce</description>
    <fields>
        <fullName>Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Cliente</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Transazioni</relationshipLabel>
        <relationshipName>Transazioni</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Citta_Fatturazione__c</fullName>
        <label>Città Fatturazione</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Citta_Spedizione__c</fullName>
        <label>Città Spedizione</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Codice_Cassa__c</fullName>
        <label>Codice Cassa</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Codice_Nazione_Fatturazione__c</fullName>
        <label>Codice Nazione Fatturazione</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Codice_Nazione_Spedizione__c</fullName>
        <label>Codice Nazione Spedizione</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Codice_Postale_Fatturazione__c</fullName>
        <label>Codice Postale Fatturazione</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Codice_Postale_Spedizione__c</fullName>
        <label>Codice Postale Spedizione</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Codice_Stato_Fatturazione__c</fullName>
        <label>Codice Stato Fatturazione</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Codice_Stato_Spedizione__c</fullName>
        <label>Codice Stato Spedizione</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Cognome_Fatturazione__c</fullName>
        <label>Cognome Fatturazione</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Cognome_Spedizione__c</fullName>
        <label>Cognome Spedizione</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Data_Scontrino__c</fullName>
        <label>Data Scontrino</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Data_Spedizione__c</fullName>
        <label>Data Spedizione</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Email_Fatturazione__c</fullName>
        <label>Email Fatturazione</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Email_Spedizione__c</fullName>
        <label>Email Spedizione</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Generic_customer_import__c</fullName>
        <formula>Prezzo_di_Vendita_formula__c*   Account__r.Generic_Customer__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Generic customer import</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ID_Store_Xchannel__c</fullName>
        <label>ID Store Xchannel</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Id_Cliente_DW__c</fullName>
        <label>Id Cliente DW</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Id_Cliente_Micros__c</fullName>
        <label>Id Cliente Micros</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Id_Cliente_Relate__c</fullName>
        <label>Id Cliente Relate</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Id_Cliente__c</fullName>
        <label>Id Cliente</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Id_Location_Micros__c</fullName>
        <label>Id Location Micros</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Id_Location__c</fullName>
        <label>Id Location</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Id_Transazione_originaria_Ecommerce__c</fullName>
        <label>Id Transazione originaria Ecommerce</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Importo_Iva__c</fullName>
        <label>Importo Iva</label>
        <summarizedField>Transaction_Detail__c.Importo_IVA__c</summarizedField>
        <summaryForeignKey>Transaction_Detail__c.Transaction__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Importo_Sconto__c</fullName>
        <formula>if ( 

Or (Prezzo_di_Listino__c - Prezzo_di_Vendita__c=0, (And (Prezzo_di_Listino__c &lt; Prezzo_di_Vendita__c, Prezzo_di_Listino__c&gt;0  ))), 


0 , 

Prezzo_di_Listino__c - Prezzo_di_Vendita__c 

)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Importo Sconto (Sede)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Importo_Sconto_formula__c</fullName>
        <formula>CASE($User.CurrencyISOcode__c, 
&quot;BRL&quot;, Sconto_EUR__c, 
&quot;CAD&quot;, Sconto_CAD__c, 
&quot;CHF&quot;, Sconto_CHF__c, 
&quot;CNY&quot;, Sconto_CNY__c, 
&quot;EUR&quot;, Sconto_EUR__c, 
&quot;GBP&quot;, Sconto_GBP__c, 
&quot;HKD&quot;, Sconto_HKD__c, 
&quot;JPY&quot;, Sconto_JPY__c, 
&quot;USD&quot;, Sconto_USD__c, 
&quot;MOP&quot;, Sconto_MOP__c, 
&quot;RUB&quot;, Sconto_RUB__c, 
&quot;AUD&quot;, Sconto_AUD__c, 
&quot;DKK&quot;, Sconto_DKK__c, 
Importo_Sconto__c)</formula>
        <label>Importo Sconto (formula)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Indirizzo_Fatturazione__c</fullName>
        <label>Indirizzo Fatturazione</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Indirizzo_Spedizione__c</fullName>
        <label>Indirizzo Spedizione</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Iva__c</fullName>
        <formula>if (Prezzo_Netto_IVA__c=0, 0,
((Prezzo_di_Vendita__c - Prezzo_Netto_IVA__c)/Prezzo_Netto_IVA__c))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Weighted average with regard to line</inlineHelpText>
        <label>Iva</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Key_Transazione__c</fullName>
        <externalId>true</externalId>
        <label>Key Transazione</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Key__c</fullName>
        <formula>Name &amp;  Id_Location_Micros__c &amp; Codice_Cassa__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Key</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Location__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Location</label>
        <referenceTo>Location__c</referenceTo>
        <relationshipLabel>Transazioni</relationshipLabel>
        <relationshipName>Transazioni</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Nome_Fatturazione__c</fullName>
        <label>Nome Fatturazione</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Nome_Spedizione__c</fullName>
        <label>Nome Spedizione</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Note_Upselling__c</fullName>
        <label>Note Upselling</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>PSconto_AED__c</fullName>
        <label>% di Sconto (AED)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>PSconto_AUD__c</fullName>
        <label>% di Sconto (AUD)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>PSconto_BRL__c</fullName>
        <label>% di Sconto (BRL)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>PSconto_CAD__c</fullName>
        <label>% di Sconto (CAD)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>PSconto_CHF__c</fullName>
        <label>% di Sconto (CHF)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>PSconto_CNY__c</fullName>
        <label>% di Sconto (CNY)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>PSconto_DKK__c</fullName>
        <label>% di Sconto (DKK)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>PSconto_EUR__c</fullName>
        <label>% di Sconto (EUR)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>PSconto_GBP__c</fullName>
        <label>% di Sconto (GBP)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>PSconto_HKD__c</fullName>
        <label>% di Sconto (HKD)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>PSconto_JPY__c</fullName>
        <label>% di Sconto (JPY)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>PSconto_KRW__c</fullName>
        <label>% di Sconto (KRW)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>PSconto_MOP__c</fullName>
        <label>% di Sconto (MOP)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>PSconto_PLN__c</fullName>
        <label>% di Sconto (PLN)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>PSconto_QAR__c</fullName>
        <label>% di Sconto (QAR)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>PSconto_RUB__c</fullName>
        <label>% di Sconto (RUB)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>PSconto_SAR__c</fullName>
        <label>% di Sconto (SAR)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>PSconto_SGD__c</fullName>
        <label>% di Sconto (SGD)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>PSconto_USD__c</fullName>
        <label>% di Sconto (USD)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>PSconto__c</fullName>
        <formula>if 
( OR( Prezzo_di_Listino__c=0.00, ISBLANK(Prezzo_di_Listino__c )), 0, 

if ( 
(Importo_Sconto__c / Prezzo_di_Listino__c)&lt;0, 
0, 
Importo_Sconto__c/ Prezzo_di_Listino__c 
) 
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>% sconto (Sede)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>PostVoidComment__c</fullName>
        <label>PostVoidComment</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>PostVoidReasonCode__c</fullName>
        <label>PostVoidReasonCode</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Prezzo_Netto_IVA_AED__c</fullName>
        <label>Prezzo netto IVA (AED)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Prezzo_Netto_IVA_KRW__c</fullName>
        <label>Prezzo netto IVA (KRW)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Prezzo_Netto_IVA_PLN__c</fullName>
        <label>Prezzo netto IVA (PLN)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Prezzo_Netto_IVA_QAR__c</fullName>
        <label>Prezzo netto IVA (QAR)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Prezzo_Netto_IVA_SAR__c</fullName>
        <label>Prezzo netto IVA (SAR)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Prezzo_Netto_IVA_SGD__c</fullName>
        <label>Prezzo netto IVA (SGD)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Prezzo_Netto_IVA__c</fullName>
        <label>Prezzo Netto IVA</label>
        <summarizedField>Transaction_Detail__c.Prezzo_Netto_Iva__c</summarizedField>
        <summaryForeignKey>Transaction_Detail__c.Transaction__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Prezzo_Netto_IVA_formula__c</fullName>
        <formula>CASE($User.CurrencyISOcode__c, 
&quot;BRL&quot;, Prezzo_netto_IVA_BRL__c, 
&quot;CAD&quot;, Prezzo_netto_IVA_CAD__c, 
&quot;CHF&quot;, Prezzo_netto_IVA_CHF__c, 
&quot;CNY&quot;, Prezzo_netto_IVA_CNY__c, 
&quot;EUR&quot;, Prezzo_netto_IVA_EUR__c, 
&quot;GBP&quot;, Prezzo_netto_IVA_GBP__c, 
&quot;HKD&quot;, Prezzo_netto_IVA_HKD__c, 
&quot;JPY&quot;, Prezzo_netto_IVA_JPY__c, 
&quot;USD&quot;, Prezzo_netto_IVA_USD__c, 
&quot;MOP&quot;, Prezzo_netto_IVA_MOP__c,
&quot;AUD&quot;, Prezzo_netto_IVA_AUD__c,
&quot;DKK&quot;, Prezzo_netto_IVA_DKK__c,
&quot;RUB&quot;, Prezzo_netto_IVA_RUB__c,
&quot;KRW&quot;, Prezzo_Netto_IVA_KRW__c,
&quot;AED&quot;, Prezzo_Netto_IVA_AED__c,
&quot;PLN&quot;, Prezzo_Netto_IVA_PLN__c,
&quot;QAR&quot;, Prezzo_Netto_IVA_QAR__c,
&quot;SGD&quot;, Prezzo_Netto_IVA_SGD__c,
&quot;SAR&quot;, Prezzo_Netto_IVA_SAR__c,
Prezzo_Netto_IVA__c)</formula>
        <label>Prezzo Netto IVA (formula)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Prezzo_di_Listino__c</fullName>
        <label>Prezzo di Listino (Sede)</label>
        <summarizedField>Transaction_Detail__c.Prezzo_di_Listino__c</summarizedField>
        <summaryForeignKey>Transaction_Detail__c.Transaction__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Prezzo_di_Listino_formula__c</fullName>
        <formula>CASE($User.CurrencyISOcode__c, 
&quot;BRL&quot;, Prezzo_di_listino_BRL__c, 
&quot;CAD&quot;, Prezzo_di_listino_CAD__c, 
&quot;CHF&quot;, Prezzo_di_listino_CHF__c, 
&quot;CNY&quot;, Prezzo_di_listino_CNY__c, 
&quot;EUR&quot;, Prezzo_di_listino_EUR__c, 
&quot;GBP&quot;, Prezzo_di_listino_GBP__c, 
&quot;HKD&quot;, Prezzo_di_listino_HKD__c, 
&quot;JPY&quot;, Prezzo_di_listino_JPY__c, 
&quot;USD&quot;, Prezzo_di_listino_USD__c,
&quot;MOP&quot;, Prezzo_di_listino_MOP__c,
&quot;AUD&quot;, Prezzo_di_listino_AUD__c,
&quot;DKK&quot;, Prezzo_di_listino_DKK__c,
&quot;RUB&quot;, Prezzo_di_listino_RUB__c,
&quot;KRW&quot;, Prezzo_di_listino_KRW__c,
&quot;AED&quot;, Prezzo_di_listino_AED__c,
&quot;PLN&quot;, Prezzo_di_listino_PLN__c,
&quot;QAR&quot;, Prezzo_di_listino_QAR__c,
&quot;SGD&quot;, Prezzo_di_listino_SGD__c,
&quot;SAR&quot;, Prezzo_di_listino_SAR__c,
Prezzo_di_Listino__c)</formula>
        <label>Retail price</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Prezzo_di_Vendita__c</fullName>
        <label>Prezzo di Vendita (Sede)</label>
        <summarizedField>Transaction_Detail__c.Prezzo_di_Vendita__c</summarizedField>
        <summaryForeignKey>Transaction_Detail__c.Transaction__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Prezzo_di_Vendita_formula__c</fullName>
        <formula>CASE($User.CurrencyISOcode__c, 
&quot;BRL&quot;, Prezzo_di_vendita_BRL__c, 
&quot;CAD&quot;, Prezzo_di_vendita_CAD__c, 
&quot;CHF&quot;, Prezzo_di_vendita_CHF__c, 
&quot;CNY&quot;, Prezzo_di_vendita_CNY__c, 
&quot;EUR&quot;, Prezzo_di_vendita_EUR__c, 
&quot;GBP&quot;, Prezzo_di_vendita_GBP__c, 
&quot;HKD&quot;, Prezzo_di_vendita_HKD__c, 
&quot;JPY&quot;, Prezzo_di_vendita_JPY__c, 
&quot;USD&quot;, Prezzo_di_vendita_USD__c, 
&quot;MOP&quot;, Prezzo_di_vendita_MOP__c,
&quot;AUD&quot;, Prezzo_di_vendita_AUD__c,
&quot;DKK&quot;, Prezzo_di_vendita_DKK__c,
&quot;RUB&quot;, Prezzo_di_vendita_RUB__c,
&quot;KRW&quot;, Prezzo_di_vendita_KRW__c,
&quot;AED&quot;, Prezzo_di_vendita_AED__c,
&quot;PLN&quot;, Prezzo_di_vendita_PLN__c,
&quot;QAR&quot;, Prezzo_di_vendita_QAR__c,
&quot;SGD&quot;, Prezzo_di_vendita_SGD__c,
&quot;SAR&quot;, Prezzo_di_vendita_SAR__c,
Prezzo_di_Vendita__c)</formula>
        <label>Prezzo di Vendita (formula)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Prezzo_di_listino_AED__c</fullName>
        <label>Prezzo di listino (AED)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Prezzo_di_listino_AUD__c</fullName>
        <label>Prezzo di listino (AUD)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Prezzo_di_listino_BRL__c</fullName>
        <label>Prezzo di listino (BRL)</label>
        <summarizedField>Transaction_Detail__c.Prezzo_di_listino_BRL__c</summarizedField>
        <summaryForeignKey>Transaction_Detail__c.Transaction__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Prezzo_di_listino_CAD__c</fullName>
        <label>Prezzo di listino (CAD)</label>
        <summarizedField>Transaction_Detail__c.Prezzo_di_listino_CAD__c</summarizedField>
        <summaryForeignKey>Transaction_Detail__c.Transaction__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Prezzo_di_listino_CHF__c</fullName>
        <label>Prezzo di listino (CHF)</label>
        <summarizedField>Transaction_Detail__c.Prezzo_di_listino_CHF__c</summarizedField>
        <summaryForeignKey>Transaction_Detail__c.Transaction__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Prezzo_di_listino_CNY__c</fullName>
        <label>Prezzo di listino (CNY)</label>
        <summarizedField>Transaction_Detail__c.Prezzo_di_listino_CNY__c</summarizedField>
        <summaryForeignKey>Transaction_Detail__c.Transaction__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Prezzo_di_listino_DKK__c</fullName>
        <label>Prezzo di listino (DKK)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Prezzo_di_listino_EUR__c</fullName>
        <label>Prezzo di listino (EUR)</label>
        <summarizedField>Transaction_Detail__c.Prezzo_di_Listino_EUR__c</summarizedField>
        <summaryForeignKey>Transaction_Detail__c.Transaction__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Prezzo_di_listino_GBP__c</fullName>
        <label>Prezzo di listino (GBP)</label>
        <summarizedField>Transaction_Detail__c.Prezzo_di_listino_GBP__c</summarizedField>
        <summaryForeignKey>Transaction_Detail__c.Transaction__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Prezzo_di_listino_HKD__c</fullName>
        <label>Prezzo di listino (HKD)</label>
        <summarizedField>Transaction_Detail__c.Prezzo_di_listino_HKD__c</summarizedField>
        <summaryForeignKey>Transaction_Detail__c.Transaction__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Prezzo_di_listino_JPY__c</fullName>
        <label>Prezzo di listino (JPY)</label>
        <summarizedField>Transaction_Detail__c.Prezzo_di_listino_JPY__c</summarizedField>
        <summaryForeignKey>Transaction_Detail__c.Transaction__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Prezzo_di_listino_KRW__c</fullName>
        <label>Prezzo di listino (KRW)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Prezzo_di_listino_MOP__c</fullName>
        <label>Prezzo di listino (MOP)</label>
        <summarizedField>Transaction_Detail__c.Prezzo_di_listino_MOP__c</summarizedField>
        <summaryForeignKey>Transaction_Detail__c.Transaction__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Prezzo_di_listino_PLN__c</fullName>
        <label>Prezzo di listino (PLN)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Prezzo_di_listino_QAR__c</fullName>
        <label>Prezzo di listino (QAR)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Prezzo_di_listino_RUB__c</fullName>
        <label>Prezzo di listino (RUB)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Prezzo_di_listino_SAR__c</fullName>
        <label>Prezzo di listino (SAR)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Prezzo_di_listino_SGD__c</fullName>
        <label>Prezzo di listino (SGD)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Prezzo_di_listino_USD__c</fullName>
        <label>Prezzo di listino (USD)</label>
        <summarizedField>Transaction_Detail__c.Prezzo_di_listino_USD__c</summarizedField>
        <summaryForeignKey>Transaction_Detail__c.Transaction__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Prezzo_di_vendita_AED__c</fullName>
        <label>Prezzo di vendita (AED)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Prezzo_di_vendita_AUD__c</fullName>
        <label>Prezzo di vendita (AUD)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Prezzo_di_vendita_BRL__c</fullName>
        <label>Prezzo di vendita (BRL)</label>
        <summarizedField>Transaction_Detail__c.Prezzo_di_vendita_BRL__c</summarizedField>
        <summaryForeignKey>Transaction_Detail__c.Transaction__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Prezzo_di_vendita_CAD__c</fullName>
        <label>Prezzo di vendita (CAD)</label>
        <summarizedField>Transaction_Detail__c.Prezzo_di_vendita_CAD__c</summarizedField>
        <summaryForeignKey>Transaction_Detail__c.Transaction__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Prezzo_di_vendita_CHF__c</fullName>
        <label>Prezzo di vendita (CHF)</label>
        <summarizedField>Transaction_Detail__c.Prezzo_di_vendita_CHF__c</summarizedField>
        <summaryForeignKey>Transaction_Detail__c.Transaction__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Prezzo_di_vendita_CNY__c</fullName>
        <label>Prezzo di vendita (CNY)</label>
        <summarizedField>Transaction_Detail__c.Prezzo_di_vendita_CNY__c</summarizedField>
        <summaryForeignKey>Transaction_Detail__c.Transaction__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Prezzo_di_vendita_DKK__c</fullName>
        <label>Prezzo di vendita (DKK)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Prezzo_di_vendita_EUR__c</fullName>
        <label>Prezzo di vendita (EUR)</label>
        <summarizedField>Transaction_Detail__c.Prezzo_di_Vendita_EUR__c</summarizedField>
        <summaryForeignKey>Transaction_Detail__c.Transaction__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Prezzo_di_vendita_GBP__c</fullName>
        <label>Prezzo di vendita (GBP)</label>
        <summarizedField>Transaction_Detail__c.Prezzo_di_vendita_GBP__c</summarizedField>
        <summaryForeignKey>Transaction_Detail__c.Transaction__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Prezzo_di_vendita_HKD__c</fullName>
        <label>Prezzo di vendita (HKD)</label>
        <summarizedField>Transaction_Detail__c.Prezzo_di_vendita_HKD__c</summarizedField>
        <summaryForeignKey>Transaction_Detail__c.Transaction__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Prezzo_di_vendita_JPY__c</fullName>
        <label>Prezzo di vendita (JPY)</label>
        <summarizedField>Transaction_Detail__c.Prezzo_di_vendita_JPY__c</summarizedField>
        <summaryForeignKey>Transaction_Detail__c.Transaction__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Prezzo_di_vendita_KRW__c</fullName>
        <label>Prezzo di vendita (KRW)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Prezzo_di_vendita_MOP__c</fullName>
        <label>Prezzo di vendita (MOP)</label>
        <summarizedField>Transaction_Detail__c.Prezzo_di_vendita_MOP__c</summarizedField>
        <summaryForeignKey>Transaction_Detail__c.Transaction__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Prezzo_di_vendita_PLN__c</fullName>
        <label>Prezzo di vendita (PLN)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Prezzo_di_vendita_QAR__c</fullName>
        <label>Prezzo di vendita (QAR)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Prezzo_di_vendita_RUB__c</fullName>
        <label>Prezzo di vendita (RUB)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Prezzo_di_vendita_SAR__c</fullName>
        <label>Prezzo di vendita (SAR)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Prezzo_di_vendita_SGD__c</fullName>
        <label>Prezzo di vendita (SGD)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Prezzo_di_vendita_USD__c</fullName>
        <label>Prezzo di vendita (USD)</label>
        <summarizedField>Transaction_Detail__c.Prezzo_di_vendita_USD__c</summarizedField>
        <summaryForeignKey>Transaction_Detail__c.Transaction__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Prezzo_netto_IVA_AUD__c</fullName>
        <label>Prezzo netto IVA (AUD)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Prezzo_netto_IVA_BRL__c</fullName>
        <label>Prezzo netto IVA (BRL)</label>
        <summarizedField>Transaction_Detail__c.Prezzo_netto_IVA_BRL__c</summarizedField>
        <summaryForeignKey>Transaction_Detail__c.Transaction__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Prezzo_netto_IVA_CAD__c</fullName>
        <label>Prezzo netto IVA (CAD)</label>
        <summarizedField>Transaction_Detail__c.Prezzo_netto_IVA_CAD__c</summarizedField>
        <summaryForeignKey>Transaction_Detail__c.Transaction__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Prezzo_netto_IVA_CHF__c</fullName>
        <label>Prezzo netto IVA (CHF)</label>
        <summarizedField>Transaction_Detail__c.Prezzo_netto_IVA_CHF__c</summarizedField>
        <summaryForeignKey>Transaction_Detail__c.Transaction__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Prezzo_netto_IVA_CNY__c</fullName>
        <label>Prezzo netto IVA (CNY)</label>
        <summarizedField>Transaction_Detail__c.Prezzo_netto_IVA_CNY__c</summarizedField>
        <summaryForeignKey>Transaction_Detail__c.Transaction__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Prezzo_netto_IVA_DKK__c</fullName>
        <label>Prezzo netto IVA (DKK)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Prezzo_netto_IVA_EUR__c</fullName>
        <label>Prezzo netto IVA (EUR)</label>
        <summarizedField>Transaction_Detail__c.Prezzo_netto_iva_EUR__c</summarizedField>
        <summaryForeignKey>Transaction_Detail__c.Transaction__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Prezzo_netto_IVA_GBP__c</fullName>
        <label>Prezzo netto IVA (GBP)</label>
        <summarizedField>Transaction_Detail__c.Prezzo_netto_IVA_GBP__c</summarizedField>
        <summaryForeignKey>Transaction_Detail__c.Transaction__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Prezzo_netto_IVA_HKD__c</fullName>
        <label>Prezzo netto IVA (HKD)</label>
        <summarizedField>Transaction_Detail__c.Prezzo_netto_IVA_HKD__c</summarizedField>
        <summaryForeignKey>Transaction_Detail__c.Transaction__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Prezzo_netto_IVA_JPY__c</fullName>
        <label>Prezzo netto IVA (JPY)</label>
        <summarizedField>Transaction_Detail__c.Prezzo_netto_IVA_JPY__c</summarizedField>
        <summaryForeignKey>Transaction_Detail__c.Transaction__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Prezzo_netto_IVA_MOP__c</fullName>
        <label>Prezzo netto IVA (MOP)</label>
        <summarizedField>Transaction_Detail__c.Prezzo_netto_IVA_MOP__c</summarizedField>
        <summaryForeignKey>Transaction_Detail__c.Transaction__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Prezzo_netto_IVA_RUB__c</fullName>
        <label>Prezzo netto IVA (RUB)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Prezzo_netto_IVA_USD__c</fullName>
        <label>Prezzo netto IVA (USD)</label>
        <summarizedField>Transaction_Detail__c.Prezzo_Netto_Iva_USD__c</summarizedField>
        <summaryForeignKey>Transaction_Detail__c.Transaction__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Proprieta_Cross_Selling__c</fullName>
        <description>Tag che indica  il fattore scatenante l&apos;upselling</description>
        <label>Proprietà Cross Selling</label>
        <length>255</length>
        <type>Text</type>
    </fields>
</CustomObject>